--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "firebase": "^11.7.3",
     "firebase-admin": "^12.3.0",
     "genkit": "^1.8.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
     "patch-package": "^8.0.0",
@@ -53,6 +54,7 @@
     "react-dom": "^18.3.1",
     "react-email": "^2.1.5",
     "react-hook-form": "^7.54.2",
+    "react-leaflet": "^4.2.1",
     "recharts": "^2.15.1",
     "resend": "^3.4.0",
     "stripe": "^16.5.0",
@@ -61,6 +63,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
