--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "firebase-admin": "^12.3.0",
     "genkit": "^1.8.0",
     "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "leaflet-draw": "^1.0.4",
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
