--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "firebase": "^11.7.3",
     "firebase-admin": "^12.3.0",
     "genkit": "^1.8.0",
